fix(css): link visibility in inline code blocks (#1737)
Link style (color and hover) made inline links look like normal (unclickable) text thus making the documentation less helpful and harder to read.

This change introduces the following:
- Text color is now blue (instead of purple) - now it looks the same as other links
- On hover, it now shows an underline to show to the user that it is a link

--- a/src/css/components/markdown.css
+++ b/src/css/components/markdown.css
@@ -8,16 +8,7 @@
 }
 
 .markdown a code {
-  background-color: var(--purple4);
-  border-radius: 4px;
-  color: var(--purple11);
-}
-
-@supports selector(a:has(code)) {
-  .markdown a:has(code),
-  .markdown a:has(code):hover {
-    text-decoration: none;
-  }
+  color: var(--highlight);
 }
 
 .markdown a:not(.card) {
